src/index.scss
.h5p-vocabulary-drill {
  background-color: #fff;
  font-family: sans-serif;
  font-size: 1em;
  line-height: 1.5em;

  .h5p-question {
    background-color: transparent;

    /*
     * Overrides that can be removed once
     * https://h5ptechnology.atlassian.net/browse/HFP-3797 has been resolved
     * pull request at https://github.com/h5p/h5p-drag-text/pull/143
     */
    &.h5p-drag-text {
      // Override cursor state to not kick in when draggable is disabled
      [aria-grabbed] {
        cursor: inherit;

        &:not(.ui-draggable-disabled) {
          cursor: pointer;
        }
      }

      /* Override hover of disabled draggables in dropzone */
      [aria-grabbed].h5p-drag-dropped.ui-draggable-disabled:hover {
        border: none;
        color: #255c41;
        background: transparent;
      }

      /* Override hover of disabled draggables in original position */
      [aria-grabbed].ui-draggable-disabled:hover {
        border: 0.1em solid #c6c6c6;
        color: initial;
        background: #ddd;
      }

      /* Override grabbed state to improve color contrast */
      [aria-grabbed='true'] {
        opacity: 1;
      }

      /* Override dragged state to improve color contrast */
      [aria-grabbed='true'],
      [aria-grabbed='true'].h5p-drag-dropped:not(.ui-draggable-disabled):hover,
      [aria-grabbed='true']:not(.ui-draggable-disabled):hover {
        border: 0.1em solid rgb(212,190,216);
        color: #663366;
        background: #edd6e9;
      }
    }

    /*
     * Overrides to create a grid structure in H5P.DragText
     */
    &.h5p-drag-text {
      .h5p-drag-droppable-words {
        display: grid;
        grid-template-columns: repeat(2, max-content);
        row-gap: 0.5rem;

        /* Add a bottom border to all children, except the last row */
        & > *:nth-last-child(n+3) {
          border-bottom: 1px solid #eee;
          padding-bottom: 0.5rem;
        }

        /* Add a right padding to the source element (left) */
        & > span {
          padding-right: 1rem;
        }

        /* Make sure tip follows the input */
        .h5p-drag-dropzone-container {
          width: fit-content;
        }
      }
    }

    /*
     * Overrides to create a grid structure in H5P.Blanks
     */
    &.h5p-blanks {
      .h5p-question-content p {
        display: grid;
        grid-template-columns: repeat(3, max-content);
        row-gap: 0.5rem;

        /* Add a bottom border to all children, except the last row */
        & > *:nth-last-child(n+4):not(.h5p-correct-answer),
        & > *:nth-last-child(3).h5p-input-wrapper {
          border-bottom: 1px solid #eee;
          padding-bottom: 0.5rem;
        }

        /* Place elements in the grid */
        & > span:not(.h5p-input-wrapper, .h5p-correct-answer) {
          grid-column-start: 1;
          padding-right: 1rem;
        }

        & > span.h5p-input-wrapper {
          grid-column-start: 2;
        }

        & > span.h5p-correct-answer {
          grid-column-start: 3;
        }

        /* Make all inputs the same width */
        .h5p-text-input {
          box-sizing: border-box;
          width: 10rem !important;
        }

        /* Make sure inputs ::after follows input */
        .h5p-input-wrapper {
          width: fit-content;
        }

        /* Create a bottom border to the correct answer */
        .h5p-correct-answer {
          align-self: end;
          line-height: 1.375em;
          width: fit-content;

          &:not(:last-child) {
            margin-bottom: 0.5rem;
            position: relative;

            &::after {
              border-bottom: 1px solid #eee;
              content: '';
              display: inline-block;
              height: 100%;
              left: -0.75rem;
              padding: 0 0.5rem 0.5rem;
              position: absolute;
              top: 0;
              width: 100%;
            }
          }
        }
      }
    }

    /*
     * Overrides to create a grid structure in H5P.DragText and H5P.Blanks
     */
    &.h5p-drag-text,
    &.h5p-blanks {
      /* Make sure the grid content is reachable on mobile */
      overflow-x: auto;
      /*
       * Hide vertical scrollbar while content updates.
       * overflow-y will implicitly be computed as auto if visible is used
       * https://developer.mozilla.org/en-US/docs/Web/CSS/overflow-y
       */
      overflow-y: hidden;
    }
  }

  .h5p-question-introduction {
    margin: 0;
    padding: 1em 1em 0.5em;
  }

  .h5p-vd-empty-state {
    padding: 2rem 1rem;
    text-align: center;
  }

  .visually-hidden {
    clip: rect(0 0 0 0);
    clip-path: inset(50%);
    height: 1px;
    overflow: hidden;
    position: absolute;
    white-space: nowrap;
    width: 1px;
  }

  .h5p-vocabulary-drill-score-page {
    align-items: center;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;

    /* Add spacing if no progress bar below */
    &:last-child {
      margin-bottom: 1rem;
    }

    button.h5p-vocabulary-drill-restart::before {
      content: '\F01E';
      font-family: 'H5PFontAwesome4';
      padding-right: 0.5em;
    }
  }
}

.h5p-vocabulary-drill-toolbar {
  align-items: center;
  background-color: #fff;
  box-shadow: 10px 10px 30px rgb(166 166 166 / 20%);
  display: flex;
  flex-wrap: wrap;
  gap: 1em;
  justify-content: space-between;
  margin-bottom: 1em;
  min-height: 2.7em;
  padding: 0.5em 1em;
  position: relative;

  p {
    color: #4c4452;
    font-family: sans-serif;
    font-size: 1.15em;
    font-weight: 700;
    line-height: 1.2em;
    margin: 0;
  }

  &-tools {
    display: flex;
    flex-wrap: wrap;
    gap: 0.5em;
    max-width: 100%;
  }

  button {
    background-color: #f5f7fc;
    border: none;
    color: #356bbd;
    cursor: pointer;
    display: inline-block;
    font-size: 1em;
    font-weight: 700;
    line-height: 1.2;
    max-width: 100%;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 0.75em 1.25em;
    white-space: nowrap;

    &:hover:not(:disabled),
    &:focus:not(:disabled) {
      background-color: #eaeff8;
    }

    &:disabled {
      background-color: #f2f2f2;
      color: grey;
      cursor: not-allowed;
    }

    &.h5p-vocabulary-drill-language-mode:before {
      content: '\F021';
      font-family: 'H5PFontAwesome4';
      padding-right: 0.5em;
    }
  }

  .h5p-vocabulary-drill-combobox {
    .combo {
      display: block;
      max-width: 25rem;
      position: relative;

      *,
      *::before,
      *::after {
        box-sizing: border-box;
      }

      &::after {
        color: #356bbd;
        content: '\f107';
        font-family: 'H5PFontAwesome4';
        font-size: 1.2em;
        pointer-events: none;
        position: absolute;
        right: 1em;
        top: 50%;
        transform: translate(0, -50%);
      }

      &::before {
        color: #356bbd;
        content: '\F040';
        font-family: 'H5PFontAwesome4';
        position: absolute;
        pointer-events: none;
        top: 50%;
        transform: translate(0, -50%);
        left: 1.25em;
      }

      &.h5p-vocabulary-drill-fill-in::before {
        content: '\F040';
      }

      &.h5p-vocabulary-drill-drag-text::before {
        content: '\F047';
      }

      &.disabled {
        &::after,
        &::before {
          color: grey;
        }
      }

      &-input {
        background-color: #f5f7fc;
        border: none;
        border-radius: 0;
        color: #356bbd;
        cursor: pointer;
        font-size: 1em;
        font-weight: 700;
        line-height: 1.2;
        padding: 0.75em 2.75em 0.75em 2.7em;

        &:hover:not(:disabled),
        &:focus:not(:disabled) {
          background-color: #eaeff8;
        }
      }

      &.disabled {
        .combo-input {
          background-color: #f2f2f2;
          color: #696969;
          cursor: not-allowed;
          opacity: 1;
        }
      }

      &-menu {
        background-color: #f5f7fc;
        border: 1px solid rgb(0 0 0 / 25%);
        border-radius: 0;
        cursor: pointer;
        display: none;
        max-height: 18.75rem;
        overflow-y: auto;
        left: 0;
        position: absolute;
        top: 100%;
        width: 100%;
        z-index: 100;
      }

      &-option {
        padding: 0.5em 0.75em;
        position: relative;

        &.option-current {
          background-color: #356bbd;
          color: #fff;
        }

        &[aria-selected="true"] {
          &::after {
            border-bottom: 1.5px solid #000;
            border-right: 1.5px solid #000;
            content: "";
            height: 0.8em;
            position: absolute;
            right: 1em;
            top: 46%;
            transform: translate(0, -54%) rotate(45deg);
            width: 0.4em;
          }

          &.option-current::after {
            border-color: #fff;
          }
        }
      }

      &.open .combo-menu {
        display: block;
      }
    }
  }
}

.h5p-vocabulary-drill-status {
  align-items: center;
  background-color: #fff;
  display: flex;
  flex-wrap: wrap;
  gap: 2em;
  justify-content: space-between;
  min-height: 2.7em;
  padding: 0.5em 1em;
  position: relative;

  button {
    background-color: #f5f7fc;
    border: none;
    color: #356bbd;
    cursor: pointer;
    display: inline-block;
    font-size: 1em;
    font-weight: 700;
    line-height: 1.2;
    padding: 0.75em 1.25em;
    white-space: nowrap;

    &:hover:not(:disabled),
    &:focus:not(:disabled) {
      background-color: #eaeff8;
    }

    &:disabled {
      background-color: #f2f2f2;
      color: #696969;
      cursor: not-allowed;
    }

    &.h5p-vocabulary-drill-next::after {
      content: '\F105';
      font-family: 'H5PFontAwesome4';
      padding-left: 0.5em;
    }
  }

  &-score {
    color: #4c4452;
    font-size: 1em;
    font-weight: 700;
    flex-grow: 1;
  }

  &-pages {
    margin: 0 0 0 auto;
  }

  &-number {
    color: #356BBD;
    font-size: 1.2em;
    font-weight: 700;
  }

  &-divider {
    color: #4c4452;
    font-size: 1.2em;
    font-weight: 700;
  }
}

.h5p-vocabulary-drill-progressbar {
  margin-top: 1em;
  position: relative;

  .h5p-joubelui-progressbar {
    background: #D3DDEE;
    box-shadow: none;

    &-background {
      background-color: #356BBD;
    }
  }
}

